src/query/functions-v2/tests/it/scalars/testdata/datetime.txt
error: 
  --> SQL:1:1
  |
1 | to_timestamp(-30610224000000001)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ timestamp `0999-12-31 23:59:59.999999` is out of range



ast            : to_timestamp(-315360000000000)
raw expr       : to_timestamp(minus(315360000000000_u64))
checked expr   : to_timestamp<Int64>(minus<UInt64>(315360000000000_u64))
optimized expr : Timestamp { ts: -315360000000000, precision: 6 }
output type    : Timestamp
output domain  : Unknown
output         : 1960-01-04 00:00:00.000000


ast            : to_timestamp(-315360000000)
raw expr       : to_timestamp(minus(315360000000_u64))
checked expr   : to_timestamp<Int64>(minus<UInt64>(315360000000_u64))
optimized expr : Timestamp { ts: -315360000000000, precision: 3 }
output type    : Timestamp
output domain  : Unknown
output         : 1960-01-04 00:00:00.000


ast            : to_timestamp(-100)
raw expr       : to_timestamp(minus(100_u8))
checked expr   : to_timestamp<Int64>(CAST(minus<UInt8>(100_u8) AS Int64))
optimized expr : Timestamp { ts: -100000000, precision: 0 }
output type    : Timestamp
output domain  : Unknown
output         : 1969-12-31 23:58:20


ast            : to_timestamp(-0)
raw expr       : to_timestamp(minus(0_u8))
checked expr   : to_timestamp<Int64>(CAST(minus<UInt8>(0_u8) AS Int64))
optimized expr : Timestamp { ts: 0, precision: 0 }
output type    : Timestamp
output domain  : Unknown
output         : 1970-01-01 00:00:00


ast            : to_timestamp(0)
raw expr       : to_timestamp(0_u8)
checked expr   : to_timestamp<Int64>(CAST(0_u8 AS Int64))
optimized expr : Timestamp { ts: 0, precision: 0 }
output type    : Timestamp
output domain  : Unknown
output         : 1970-01-01 00:00:00


ast            : to_timestamp(100)
raw expr       : to_timestamp(100_u8)
checked expr   : to_timestamp<Int64>(CAST(100_u8 AS Int64))
optimized expr : Timestamp { ts: 100000000, precision: 0 }
output type    : Timestamp
output domain  : Unknown
output         : 1970-01-01 00:01:40


ast            : to_timestamp(315360000000)
raw expr       : to_timestamp(315360000000_u64)
checked expr   : to_timestamp<Int64>(CAST(315360000000_u64 AS Int64))
optimized expr : Timestamp { ts: 315360000000000, precision: 3 }
output type    : Timestamp
output domain  : Unknown
output         : 1979-12-30 00:00:00.000


ast            : to_timestamp(315360000000000)
raw expr       : to_timestamp(315360000000000_u64)
checked expr   : to_timestamp<Int64>(CAST(315360000000000_u64 AS Int64))
optimized expr : Timestamp { ts: 315360000000000, precision: 6 }
output type    : Timestamp
output domain  : Unknown
output         : 1979-12-30 00:00:00.000000


error: 
  --> SQL:1:1
  |
1 | to_timestamp(253402300800000000)
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ timestamp `+10000-01-01 00:00:00.000000` is out of range



ast            : to_timestamp(a)
raw expr       : to_timestamp(ColumnRef(0)::Int64)
checked expr   : to_timestamp<Int64>(ColumnRef(0))
evaluation:
+--------+--------------------------------------+----------------------------+
|        | a                                    | Output                     |
+--------+--------------------------------------+----------------------------+
| Type   | Int64                                | Timestamp                  |
| Domain | {-315360000000000..=315360000000000} | Unknown                    |
| Row 0  | -315360000000000                     | 1960-01-04 00:00:00.000000 |
| Row 1  | 315360000000                         | 1979-12-30 00:00:00.000000 |
| Row 2  | -100                                 | 1969-12-31 23:58:20.000000 |
| Row 3  | 0                                    | 1970-01-01 00:00:00.000000 |
| Row 4  | 100                                  | 1970-01-01 00:01:40.000000 |
| Row 5  | 315360000000                         | 1979-12-30 00:00:00.000000 |
| Row 6  | 315360000000000                      | 1979-12-30 00:00:00.000000 |
+--------+--------------------------------------+----------------------------+
evaluation (internal):
+--------+---------------------------------------------------------------------------------------------------------------------------------------+
| Column | Data                                                                                                                                  |
+--------+---------------------------------------------------------------------------------------------------------------------------------------+
| a      | Int64([-315360000000000, 315360000000, -100, 0, 100, 315360000000, 315360000000000])                                                  |
| Output | TimestampColumn { ts: [-315360000000000, 315360000000000, -100000000, 0, 100000000, 315360000000000, 315360000000000], precision: 6 } |
+--------+---------------------------------------------------------------------------------------------------------------------------------------+


